@@ -348,7 +348,7 @@ $fontLight: lighter 10px tahoma, verdana;
           }
 
           &.kdesc {
-            max-width: 50px;
+            max-width: 1000px;
             word-wrap: break-word;
           }
         }
